Mejoras traducción, nav y js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title data-i18n="title">Mamunias</title>
+
+    <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
     <!--
     <link rel="stylesheet" href="styles/styles.css" />
     -->
@@ -337,7 +339,7 @@
 
         <section class="contact-form" id="contacto">
             <h2 data-i18n="contact_title">Contacto</h2>
-            <form id="contactoForm" action="tu-endpoint-o-formspree" method="POST" novalidate>
+            <form id="contactoForm" action="https://formspree.io/f/mjkoewep" method="POST" novalidate>
                 <input type="text" name="nombre" placeholder="" data-i18n-placeholder="contact_name_placeholder"
                     required pattern="^[A-Za-zÀ-ÿ\s]{1,30}$" autocomplete="off">
                 <span class="noValido" data-i18n="contact_name_error">El nombre debe contener solo letras y espacios,
