--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="technique-card" id="soft">
                 <div class="presentacion-container">
                     <div class="presentacion-imagen">
-                        <img src="./images/tsoft.png" alt="Uñas Soft Gel" data-i18n-alt="technique_softgel_img_alt" />
+                        <img src="./images/tsof.jpg" alt="Uñas Soft Gel" data-i18n-alt="technique_softgel_img_alt" />
                     </div>
                     <div class="presentacion-texto">
                         <h3 data-i18n="technique_softgel_title">Uñas Soft Gel</h3>
@@ -135,7 +135,7 @@
             <div class="technique-card" id="gel">
                 <div class="presentacion-container">
                     <div class="presentacion-imagen">
-                        <img src="./images/tgel.png" alt="Uñas de Gel" data-i18n-alt="technique_gel_img_alt" />
+                        <img src="./images/tgel.jpg" alt="Uñas de Gel" data-i18n-alt="technique_gel_img_alt" />
                     </div>
                     <div class="presentacion-texto">
                         <h3 data-i18n="technique_gel_title">Uñas de Gel</h3>
@@ -155,7 +155,7 @@
             <div class="technique-card" id="acrilico">
                 <div class="presentacion-container">
                     <div class="presentacion-imagen">
-                        <img src="./images/tacrilico.png" alt="Uñas Acrílico"
+                        <img src="./images/tacrilico.jpg" alt="Uñas Acrílico"
                             data-i18n-alt="technique_acrylic_img_alt" />
                     </div>
                     <div class="presentacion-texto">
