Readme, ajustes imagen, traducción

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             <div class="technique-card" id="soft">
                 <div class="presentacion-container">
                     <div class="presentacion-imagen">
-                        <img src="./images/tsof.jpg" alt="Uñas Soft Gel" data-i18n-alt="technique_softgel_img_alt" />
+                        <img src="./images/tsof.jpg" alt="Uñas Soft Gel"
+                            title="Foto por Sarah Cervantes en Unsplash."
+                            data-i18n-alt="technique_softgel_img_alt" />
                     </div>
                     <div class="presentacion-texto">
                         <h3 data-i18n="technique_softgel_title">Uñas Soft Gel</h3>
@@ -339,7 +341,7 @@
 
         <section class="contact-form" id="contacto">
             <h2 data-i18n="contact_title">Contacto</h2>
-            <form id="contactoForm" action="https://formspree.io/f/mjkoewep" method="POST" novalidate>
+            <form id="contactoForm" action="https://formspree.io/f/xblkaqda" method="POST" novalidate>
                 <input type="text" name="nombre" placeholder="" data-i18n-placeholder="contact_name_placeholder"
                     required pattern="^[A-Za-zÀ-ÿ\s]{1,30}$" autocomplete="off">
                 <span class="noValido" data-i18n="contact_name_error">El nombre debe contener solo letras y espacios,
@@ -382,6 +384,7 @@
                 <h3 data-i18n="footer_about_title">Sobre Mamunias</h3>
                 <ul>
                     <li><a href="#presentacion" data-i18n="footer_about_link">Sobre mi</a></li>
+                    <li><a href="/pages/privacy.html" data-i18n="footer_politica_link">Política de Privacidad</a></li>
                 </ul>
                 <div class="social-icons">
                     <a href="https://instagram.com" target="_blank" aria-label="Ir a Instagram"
