--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -102,6 +102,7 @@
                 <h3 data-i18n="footer_about_title">Sobre Mamunias</h3>
                 <ul>
                     <li><a href="../index.html#presentacion" data-i18n="footer_about_link">Sobre mí</a></li>
+                    <li><a href="/pages/privacy.html" data-i18n="footer_politica_link">Política de Privacidad</a></li>
                 </ul>
                 <div class="social-icons">
                     <a href="https://instagram.com" target="_blank" aria-label="Ir a Instagram"
